Alioth-Back/k8s/alioth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: alioth-server-service
spec:
  # ClusterIp는 클러스터 내부에서만 접근 가능한 service를 생성
  type: ClusterIP
  ports:
    - name: server-port
      port: 8080
      targetPort: 8080
  selector:
    app: alioth-deployment

---
apiVersion: v1
kind: Service
metadata:
  name: alioth-statistics-service
spec:
# ClusterIp는 클러스터 내부에서만 접근 가능한 service를 생성
  type: ClusterIP
  ports:
  - name: statistics-port
    port: 8081
    targetPort: 8081
  selector:
    app: alioth-deployment
